--- a/loja/loja.html
+++ b/loja/loja.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">Puuuramor</a>
+            <a class="navbar-brand" href="/index.html">Puuuramor</a>
             <!-- <a class="navbar-brand" href="#login">LOGIN</a> -->
         </div>
     </nav>
