Atualização do front

--- a/loja/loja.html
+++ b/loja/loja.html
@@ -12,11 +12,33 @@
     <script defer src="script.js"></script>
 </head>
 
-<body>
+<body> 
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="/index.html">Puuuramor</a>
-            <!-- <a class="navbar-brand" href="#login">LOGIN</a> -->
+            <a class="navbar-brand" href="#">Puuuramor</a>
+            <div class="logo"></div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#carousel">Recentes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#adocao">Adotar</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#nao-adotaveis">Apadrinhar</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="loja/loja.html">Loja</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contato">Contato</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
         
